Allow manual hosts entry exports in overcloud.
This makes it possible to have SSL connections to APIs from compute
hosts with no DNS or external connectivity - something the
ci-overcloud has.

Change-Id: I089ef8fdfb4a59279f09bf3cd2a4474000e4bfa6

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -86,6 +86,10 @@ Parameters:
     Type: String
   NeutronEnableTunnelling:
     Type: String
+  StaticHosts:
+    Default: ''
+    Description: Static content to append to /etc/hosts
+    Type: String
 Resources:
   ComputeAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -158,6 +162,7 @@ Resources:
         compute_agent: {Ref: CeilometerComputeAgent}
       glance:
         host: {Ref: GlanceHost}
+      hosts: {Ref: StaticHosts}
       keystone:
         host: {Ref: KeystoneHost}
       neutron:
