--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -63,6 +63,10 @@ Parameters:
     Description: The password for the ceilometer service account.
     Type: String
     NoEcho: true
+  CloudName:
+    Default: ''
+    Description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
+    Type: String
   NovaComputeDriver:
     Default: libvirt.LibvirtDriver
     Type: String
@@ -111,6 +115,20 @@ Parameters:
   NtpServer:
     Type: String
     Default: ''
+  StaticHosts:
+    Default:
+      Fn::Join:
+      - ' '
+      - - Fn::Select:
+          - 0
+          - Fn::Select:
+            - ctlplane
+            - Fn::GetAtt:
+              - notCompute0
+              - networks
+        - {Ref: CloudName}
+    Description: Static content to append to /etc/hosts
+    Type: String
 Resources:
   AccessPolicy:
     Properties:
@@ -180,6 +198,8 @@ Resources:
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
         RabbitPassword: "guest"
+        StaticHosts:
+            Ref: StaticHosts
   NovaCompute0:
     Type: FileInclude
     Path: nova-compute-instance.yaml
@@ -283,6 +303,7 @@ Resources:
                     - notCompute0
                     - networks
               - ':8000/v1/waitcondition'
+      hosts: {Ref: StaticHosts}
       keystone:
         db: mysql://keystone:unset@localhost/keystone
         host:
