--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -15,6 +15,17 @@ Parameters:
     Default: i386
     Description: The architecture to use in Nova-BM - i386 or amd64.
     Type: String
+  ControllerAddress:
+    Default:
+      Fn::Select:
+        - 0
+        - Fn::Select:
+          - "ctlplane"
+          - Fn::GetAtt:
+            - undercloud
+            - networks
+    Description: The IP address for controller endpoints in config files.
+    Type: String
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -85,13 +96,7 @@ Resources:
       admin-token: 
         Ref: AdminToken
       controller-address:
-        Fn::Select:
-          - 0
-          - Fn::Select:
-            - "ctlplane"
-            - Fn::GetAtt:
-              - undercloud
-              - networks
+        Ref: ControllerAddress
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
@@ -115,19 +120,19 @@ Resources:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
+              - {Ref: ControllerAddress}
               - ":8003"
         metadata_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
+              - {Ref: ControllerAddress}
               - ":8000"
         waitcondition_server_url:
           Fn::Join:
             - ''
             - - http://
-              - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [ undercloud, networks ]} ]}]}
+              - {Ref: ControllerAddress}
               - ":8000/v1/waitcondition"
       os-collect-config:
         cfn:
