Add username parameter for rabbit
Username is currently assumed to be guest in the configuration
files. This change makes it more explicit.

Configuration files in tripleo-image-elements will be updated
to use this parameter in an upcoming patch.

Change-Id: Ia176f4d573a3a293560c72236a4181befa678301

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -13,6 +13,9 @@ Parameters:
   RabbitHost:
     Type: String
     Default: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+  RabbitUserName:
+    Type: String
+    Default: "guest"
   RabbitPassword:
     Type: String
     Default: "guest"
@@ -59,6 +62,7 @@ Resources:
       admin-password: {Ref: AdminPassword}
       rabbit:
         host: {Ref: RabbitHost}
+        username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
       interfaces:
         control: {Ref: NeutronPublicInterface}
