--- a/examples/scale1.yaml
+++ b/examples/scale1.yaml
@@ -23,6 +23,7 @@ Resources:
     SubKey: Resources.NovaCompute0Config
     Parameters:
         ComputeImage: "123"
+        RabbitUserName: "guest"
         RabbitPassword: "guest"
   NovaCompute0:
     Type: FileInclude
