--- a/examples/scale2.yaml
+++ b/examples/scale2.yaml
@@ -2,6 +2,8 @@ HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
   ComputeImage:
     Type: String
+  RabbitUserName:
+    Type: String
   RabbitPassword:
     Type: String
     NoEcho: true
@@ -62,5 +64,6 @@ Resources:
                   - NovaCompute0
                   - networks
       rabbit:
+        username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
 
