--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -65,6 +65,8 @@ Parameters:
     Description: Password for RabbitMQ
     Type: String
     NoEcho: true
+  RabbitUserName:
+    Type: String
   RabbitPassword:
     Type: String
     NoEcho: true
@@ -180,10 +182,13 @@ Resources:
       rabbit:
         host:
           '127.0.0.1'
+        username:
+          Ref: RabbitUserName
         password:
           Ref: RabbitPassword
         users:
-          username: guest
+          username:
+            Ref: RabbitUserName
           password:
             Ref: RabbitPassword
       service-password:
