--- a/nova-compute-group.yaml
+++ b/nova-compute-group.yaml
@@ -22,6 +22,8 @@ Parameters:
     Type: String
   RabbitHost:
     Type: String
+  RabbitUserName:
+    Type: String
   RabbitPassword:
     Type: String
     NoEcho: true
@@ -54,6 +56,7 @@ Resources:
         ServicePassword: {Ref: ServicePassword}
         NeutronHost: {Ref: NeutronHost}
         RabbitHost: {Ref: RabbitHost}
+        RabbitUserName: {Ref: RabbitUserName}
         RabbitPassword: {Ref: RabbitPassword}
         NovaInterfaces: {Ref: NovaInterfaces}
         NovaComputeDriver: {Ref: NovaComputeDriver}
