--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -115,6 +115,15 @@ Parameters:
   NtpServer:
     Type: String
     Default: ''
+  RabbitUserName:
+    Default: guest
+    Description: The username for RabbitMQ
+    Type: String
+  RabbitPassword:
+    Default: guest
+    Description: The password for RabbitMQ
+    Type: String
+    NoEcho: true
   StaticHosts:
     Default:
       Fn::Join:
@@ -197,7 +206,6 @@ Resources:
             Ref: HypervisorNeutronPublicInterface
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
-        RabbitPassword: "guest"
         StaticHosts:
             Ref: StaticHosts
   NovaCompute0:
@@ -388,7 +396,10 @@ Resources:
               - Fn::GetAtt:
                 - notCompute0
                 - networks
-        password: guest
+        username:
+          Ref: RabbitUserName
+        password:
+          Ref: RabbitPassword
       ntp:
         servers:
             - {server: {Ref: NtpServer}, fudge: "stratum 0"}
