--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -57,6 +57,15 @@ Parameters:
     Description: The password for the nova service account, used by nova-api.
     Type: String
     NoEcho: true
+  RabbitUserName:
+    Default: guest
+    Description: The username for RabbitMQ
+    Type: String
+  RabbitPassword:
+    Default: guest
+    Description: The password for RabbitMQ
+    Type: String
+    NoEcho: true
 Resources:
   AccessPolicy:
     Properties:
@@ -165,7 +174,10 @@ Resources:
           Ref: NeutronPassword
       rabbit:
         host: 127.0.0.1
-        password: guest
+        username:
+          Ref: RabbitUserName
+        password:
+          Ref: RabbitPassword
   undercloud:
     Type: OS::Nova::Server
     Properties:
