--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -39,6 +39,8 @@ Parameters:
     Type: String
   RabbitHost:
     Type: String
+  RabbitUserName:
+    Type: String
   RabbitPassword:
     Type: String
     NoEcho: true
@@ -189,4 +191,5 @@ Resources:
       admin-password: {Ref: AdminPassword}
       rabbit:
         host: {Ref: RabbitHost}
+        username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
