Support TripleO-CI for overcloud builds.
For Tripleo-CI we can't generate the key in the VM and hand it out,
because we have restricted access to the machine. Plus, this has been
ugly forever. Pass an SSH key in, rather than pulling one out.

Change-Id: I1def0757758e30e63891ff099106dac158bd8d83

--- a/undercloud-vm-source.yaml
+++ b/undercloud-vm-source.yaml
@@ -7,6 +7,13 @@ Parameters:
     Default: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
     Description: Bare metal power manager driver.
     Type: String
+  PowerSSHHost:
+    Default: 192.168.122.1
+    Description: SSH host to ssh to for power management operations.
+    Type: String
+  PowerSSHPrivateKey:
+    Description: Private key for using to ssh to a virtual power host.
+    Type: NoEcho
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
@@ -35,8 +42,10 @@ Resources:
           virtual_power:
             user:
               Ref: PowerUserName
-            key: /opt/stack/boot-stack/virtual-power-key
-            ssh_host: 192.168.122.1
+            ssh_host:
+              Ref: PowerSSHHost
+            ssh_key:
+              Ref: PowerSSHPrivateKey
             type: virsh
         service-password:
           Ref: NovaPassword
