--- a/undercloud-vm-source.yaml
+++ b/undercloud-vm-source.yaml
@@ -13,7 +13,8 @@ Parameters:
     Type: String
   PowerSSHPrivateKey:
     Description: Private key for using to ssh to a virtual power host.
-    Type: NoEcho
+    Type: String
+    NoEcho: true
   PowerUserName:
     Default: stack
     Description: What username to ssh to the virtual power host with.
