--- a/examples/scale_result.yaml
+++ b/examples/scale_result.yaml
@@ -62,6 +62,7 @@ Resources:
             Ref: AWS::StackName
       rabbit:
         password: guest
+        username: guest
     Type: AWS::AutoScaling::LaunchConfiguration
   NovaCompute0Key:
     Properties:
@@ -122,6 +123,7 @@ Resources:
             Ref: AWS::StackName
       rabbit:
         password: guest
+        username: guest
     Type: AWS::AutoScaling::LaunchConfiguration
   NovaCompute1Key:
     Properties:
@@ -182,6 +184,7 @@ Resources:
             Ref: AWS::StackName
       rabbit:
         password: guest
+        username: guest
     Type: AWS::AutoScaling::LaunchConfiguration
   NovaCompute2Key:
     Properties:
