--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -194,15 +194,45 @@ Resources:
             Ref: NeutronBridgeMappings
         StaticHosts:
           Fn::Join:
-          - ' '
-          - - Fn::Select:
-              - 0
-              - Fn::Select:
-                - ctlplane
-                - Fn::GetAtt:
-                  - notCompute0
-                  - networks
-            - {Ref: CloudName}
+          - "\n"
+          - - Fn::Join:
+              - "\n"
+              - Merge::Map:
+                  NovaCompute0:
+                    Fn::Join:
+                    - ' '
+                    - - Fn::Select:
+                        - 0
+                        - Fn::Select:
+                          - ctlplane
+                          - Fn::GetAtt:
+                            - NovaCompute0
+                            - networks
+                      - Fn::Select:
+                        - name
+                        - Fn::GetAtt:
+                          - NovaCompute0
+                          - show
+                      - Fn::Join:
+                        - '.'
+                        - - Fn::Select:
+                            - name
+                            - Fn::GetAtt:
+                              - NovaCompute0
+                              - show
+                          - 'local'
+            - Fn::Join:
+              - ' '
+              - - Fn::Select:
+                  - 0
+                  - Fn::Select:
+                    - ctlplane
+                    - Fn::GetAtt:
+                      - notCompute0
+                      - networks
+                - {Ref: CloudName}
+                # If CloudName is unset, make the hosts line still valid
+                - unused
   NovaCompute0:
     Type: FileInclude
     Path: nova-compute-instance.yaml
