--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Built via Makefile
 overcloud.yaml
+overcloud-with-block-storage.yaml
+overcloud-with-block-storage-nfs.yaml
 undercloud-bm.yaml
 undercloud-vm.yaml
 undercloud-vm-tuskar.yaml
