Remove uses of functions in parameter defaults
This doesn't work in recent versions of Heat and it shouldn't really
have ever worked.

Change-Id: I60772173f8d5baa5768b5626266b2e61cd93fbe2
Closes-Bug: #1282594

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -4,15 +4,6 @@ Parameters:
   BlockStorageImage:
     Type: String
     Default: overcloud-cinder-volume
-  KeystoneHost:
-    Type: String
-    Default: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-  MySQLHost:
-    Type: String
-    Default: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-  RabbitHost:
-    Type: String
-    Default: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
   RabbitUserName:
     Type: String
     Default: "guest"
@@ -52,16 +43,16 @@ Resources:
           stack_name: {Ref: 'AWS::StackName'}
       OpenStack::ImageBuilder::Elements: [ cinder ]
       keystone:
-        host: {Ref: KeystoneHost}
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
       cinder:
-        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {Ref: MySQLHost}, '/cinder']]}
+        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] } , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           Ref: CinderPassword
         volume: 'true'
       admin-password: {Ref: AdminPassword}
       rabbit:
-        host: {Ref: RabbitHost}
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
         username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
       interfaces:
