--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -124,20 +124,6 @@ Parameters:
     Description: The password for RabbitMQ
     Type: String
     NoEcho: true
-  StaticHosts:
-    Default:
-      Fn::Join:
-      - ' '
-      - - Fn::Select:
-          - 0
-          - Fn::Select:
-            - ctlplane
-            - Fn::GetAtt:
-              - notCompute0
-              - networks
-        - {Ref: CloudName}
-    Description: Static content to append to /etc/hosts
-    Type: String
 Resources:
   AccessPolicy:
     Properties:
@@ -207,7 +193,16 @@ Resources:
         NeutronBridgeMappings:
             Ref: NeutronBridgeMappings
         StaticHosts:
-            Ref: StaticHosts
+          Fn::Join:
+          - ' '
+          - - Fn::Select:
+              - 0
+              - Fn::Select:
+                - ctlplane
+                - Fn::GetAtt:
+                  - notCompute0
+                  - networks
+            - {Ref: CloudName}
   NovaCompute0:
     Type: FileInclude
     Path: nova-compute-instance.yaml
@@ -311,7 +306,17 @@ Resources:
                     - notCompute0
                     - networks
               - ':8000/v1/waitcondition'
-      hosts: {Ref: StaticHosts}
+      hosts:
+        Fn::Join:
+        - ' '
+        - - Fn::Select:
+            - 0
+            - Fn::Select:
+              - ctlplane
+              - Fn::GetAtt:
+                - notCompute0
+                - networks
+          - {Ref: CloudName}
       keystone:
         db: mysql://keystone:unset@localhost/keystone
         host:
