Fix the hosts setting - nova uses novalocal.
Not '.local'. Doh.

Change-Id: I61ac6e5d6dfefcfe8c78618f6fc5d4c2c61831f0

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -220,7 +220,7 @@ Resources:
                             - Fn::GetAtt:
                               - NovaCompute0
                               - show
-                          - 'local'
+                          - 'novalocal'
             - Fn::Join:
               - ' '
               - - Fn::Select:
