Different Flavors for Tuskar roles
- different Flavors for control, compute and storage nodes
- for devtest use, they default to 'baremetal', so nothing
  changes
- for Tuskar, there is a possibility to have them different for
  every role

Change-Id: I8c1b80f55a91c7a7fd5e560ccdb8da82ec374084

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -11,6 +11,10 @@ Parameters:
     Type: String
     Default: "guest"
     NoEcho: true
+  OvercloudBlockStorageFlavor:
+    Default: baremetal
+    Description: Flavor for block storage nodes to request when deploying.
+    Type: String
 Resources:
   BlockStorageAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -31,7 +35,7 @@ Resources:
     Properties:
       image:
         {Ref: BlockStorageImage}
-      flavor: {Ref: Flavor}
+      flavor: {Ref: OvercloudBlockStorageFlavor}
       key_name: {Ref: KeyName}
     Metadata:
       os-collect-config:
