--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -10,7 +10,7 @@ Parameters:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
     Default: default
-  Flavor:
+  OvercloudComputeFlavor:
     Description: Use this flavor
     Type: String
     Default: baremetal
@@ -122,7 +122,7 @@ Resources:
         {Ref: NovaImage}
       image_update_policy:
         Ref: ImageUpdatePolicy
-      flavor: {Ref: Flavor}
+      flavor: {Ref: OvercloudComputeFlavor}
       key_name: {Ref: KeyName}
     Metadata:
       os-collect-config:
