--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -17,9 +17,13 @@ Parameters:
     Description: The password for the cinder service account, used by cinder-api.
     Type: String
     NoEcho: true
-  Flavor:
+  OvercloudControlFlavor:
     Default: baremetal
-    Description: Flavor to request when deploying.
+    Description: Flavor for control nodes to request when deploying.
+    Type: String
+  OvercloudComputeFlavor:
+    Default: baremetal
+    Description: Flavor for compute nodes to request when deploying.
     Type: String
   GlancePassword:
     Default: unset
@@ -446,7 +450,7 @@ Resources:
       image_update_policy:
         Ref: ImageUpdatePolicy
       flavor:
-        Ref: Flavor
+        Ref: OvercloudControlFlavor
       key_name:
         Ref: KeyName
     Metadata:
