Add GlanceLogFile and GlanceNotifierStrategy
Expose 2 new parameters to control glance configuration:
- GlanceLogFile
- GlanceNotifierStrategy

This will allow the glance configuration options log_file and
notifier_strategy to be set in glance-api.conf and glance-registry.conf

Change-Id: I1af1ecfdfe0859f2baba4579aab6e947a2a54308

--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -31,6 +31,14 @@ Parameters:
     Description: Password for connecting to glance database
     Type: String
     NoEcho: true
+  GlanceNotifierStrategy:
+    Description: Strategy to use for Glance notification queue
+    Type: String
+    Default: noop
+  GlanceLogFile:
+    Description: The filepath of the file to use for logging messages from Glance.
+    Type: String
+    Default: ''
   HeatDBPassword:
     Description: Password for accessing Heat database.
     Type: String
@@ -130,6 +138,10 @@ Resources:
             - - 'mysql://glance:'
               - {Ref: GlanceDBPassword}
               - '@127.0.0.1/glance'
+          notifier-strategy:
+            Ref: GlanceNotifierStrategy
+          log-file:
+            Ref: GlanceLogFile
       heat:
         db:
           Fn::Join:
