--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -26,6 +26,14 @@ Parameters:
     Description: The password for the glance service account, used by the glance services.
     Type: String
     NoEcho: true
+  GlanceNotifierStrategy:
+    Description: Strategy to use for Glance notification queue
+    Type: String
+    Default: noop
+  GlanceLogFile:
+    Description: The filepath of the file to use for logging messages from Glance.
+    Type: String
+    Default: ''
   HeatPassword:
     Default: unset
     Description: The password for the Heat service account, used by the Heat services.
@@ -293,6 +301,10 @@ Resources:
         swift-store-user: service:glance
         swift-store-key:
           Ref: GlancePassword
+        notifier-strategy:
+          Ref: GlanceNotifierStrategy
+        log-file:
+          Ref: GlanceLogFile
       heat:
         admin_password:
           Ref: HeatPassword
