--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -24,6 +24,14 @@ Parameters:
     Description: The password for the glance service account, used by the glance services.
     Type: String
     NoEcho: true
+  GlanceNotifierStrategy:
+    Description: Strategy to use for Glance notification queue
+    Type: String
+    Default: noop
+  GlanceLogFile:
+    Description: The filepath of the file to use for logging messages from Glance.
+    Type: String
+    Default: ''
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -113,6 +121,10 @@ Resources:
         host: 127.0.0.1
         service-password:
           Ref: GlancePassword
+          notifier-strategy:
+            Ref: GlanceNotifierStrategy
+          log-file:
+            Ref: GlanceLogFile
       heat:
         admin_password:
           Ref: HeatPassword
