--- a/notcompute.yaml
+++ b/notcompute.yaml
@@ -84,6 +84,11 @@ Parameters:
     NoEcho: true
   notcomputeImage:
     Type: String
+  HeatStackDomainAdminPassword:
+    Description: Password for heat_domain_admin user.
+    Type: String
+    Default: ''
+    NoEcho: true
 Resources:
   AccessPolicy:
     Properties:
@@ -163,6 +168,7 @@ Resources:
           region:
             Ref: AWS::Region
         auth_encryption_key: unset
+        stack_domain_admin_password: {Ref: HeatStackDomainAdminPassword}
       interfaces:
         control:
           Ref: NovaInterfaces
