--- a/examples/scale_map_result.yaml
+++ b/examples/scale_map_result.yaml
@@ -66,6 +66,50 @@ Resources:
                       - NovaCompute0
                       - show
                   - local
+          - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
+                    - NovaCompute1
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute1
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute1
+                      - show
+                  - local
+          - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
+                    - NovaCompute2
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute2
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute2
+                      - show
+                  - local
       os-collect-config:
         cfn:
           access_key_id:
@@ -126,6 +170,28 @@ Resources:
                 - Fn::Select:
                   - ctlplane
                   - Fn::GetAtt:
+                    - NovaCompute0
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute0
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute0
+                      - show
+                  - local
+          - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
                     - NovaCompute1
                     - networks
               - Fn::Select:
@@ -139,6 +205,28 @@ Resources:
                     - name
                     - Fn::GetAtt:
                       - NovaCompute1
+                      - show
+                  - local
+          - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
+                    - NovaCompute2
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute2
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute2
                       - show
                   - local
       os-collect-config:
@@ -195,6 +283,50 @@ Resources:
 
           '
         - - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
+                    - NovaCompute0
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute0
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute0
+                      - show
+                  - local
+          - Fn::Join:
+            - ' '
+            - - Fn::Select:
+                - 0
+                - Fn::Select:
+                  - ctlplane
+                  - Fn::GetAtt:
+                    - NovaCompute1
+                    - networks
+              - Fn::Select:
+                - name
+                - Fn::GetAtt:
+                  - NovaCompute1
+                  - show
+              - Fn::Join:
+                - .
+                - - Fn::Select:
+                    - name
+                    - Fn::GetAtt:
+                      - NovaCompute1
+                      - show
+                  - local
+          - Fn::Join:
             - ' '
             - - Fn::Select:
                 - 0
