Swift storage heat templates
Updated the existing swift-source template to properly list all
swift devices.

Created a new swift-storage-source template to add additional
swift-storage only nodes.

The default SWIFTSTORAGESCALE is 0. Change this number to add
additional swift storage nodes.

Change-Id: Ia05f4ad44593316430d60541106d23b032c3e760

--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -17,16 +17,33 @@ Resources:
       swift:
         devices:
           Fn::Join:
-            - ''
-            - - 'r1z1-'
-              - Fn::Select:
-                - 0
+          - ', '
+          - - Fn::Join:
+              - ''
+              - - 'r1z1-'
                 - Fn::Select:
-                  - 'ctlplane'
-                  - Fn::GetAtt:
-                    - notCompute0
-                    - networks
-              - ':%PORT%/d1'
+                  - 0
+                  - Fn::Select:
+                    - 'ctlplane'
+                    - Fn::GetAtt:
+                      - notCompute0
+                      - networks
+                - ':%PORT%/d1'
+            - Fn::Join:
+              - ', '
+              - Merge::Map:
+                  SwiftStorage0:
+                    Fn::Join:
+                    - ''
+                    - - 'r1z1-'
+                      - Fn::Select:
+                        - 0
+                        - Fn::Select:
+                          - 'ctlplane'
+                          - Fn::GetAtt:
+                            - SwiftStorage0
+                            - networks
+                      - ':%PORT%/d1'
         hash:
           Ref: SwiftHashSuffix
         part-power: 10
