Allow setting the cinder iscsi-helper option
This is necessary to support iscsi helpers other than tgtadm, such
as lioadm.

Change-Id: I8a63872185f73372fcf6c90d3dde31e5bb0a168b

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -17,6 +17,10 @@ Parameters:
     Description: The password for the cinder service account, used by cinder-api.
     Type: String
     NoEcho: true
+  CinderISCSIHelper:
+    Default: tgtadm
+    Description: The iSCSI helper to use with cinder.
+    Type: String
   OvercloudControlFlavor:
     Default: baremetal
     Description: Flavor for control nodes to request when deploying.
@@ -314,6 +318,8 @@ Resources:
         volume_size_mb: '5000'
         service-password:
           Ref: CinderPassword
+        iscsi-helper:
+          Ref: CinderISCSIHelper
       completion-handle:
         Ref: notCompute0CompletionHandle
       controller-address:
