--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -23,6 +23,15 @@ Resources:
     Properties:
       UserName:
         Ref: BlockStorageUser
+  BlockStorage0CompletionCondition:
+    Type: AWS::CloudFormation::WaitCondition
+    DependsOn: notCompute0Config
+    Properties:
+      Handle: {Ref: BlockStorage0CompletionHandle}
+      Count: '1'
+      Timeout: '1800'
+  BlockStorage0CompletionHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
   BlockStorage0:
     Type: OS::Nova::Server
     Properties:
@@ -31,6 +40,8 @@ Resources:
       flavor: {Ref: OvercloudBlockStorageFlavor}
       key_name: {Ref: KeyName}
     Metadata:
+      completion-handle:
+        Ref: BlockStorage0CompletionHandle
       os-collect-config:
         cfn:
           access_key_id:
