--- a/undercloud-vm-ironic-source.yaml
+++ b/undercloud-vm-ironic-source.yaml
@@ -9,7 +9,7 @@ Resources:
     Metadata:
       nova:
         compute_hostname: undercloud
-        compute_driver: ironic.driver.IronicDriver
+        compute_driver: ironic.nova.virt.ironic.driver.IronicDriver
         db: mysql://nova:unset@localhost/nova
         default_ephemeral_format: ext4
         host: 127.0.0.1
