Pass undercloud metadata to overcloud compute
Capture some undercloud metadata into the overcloud compute
configs, so the overcloud nodes can pull updated images from
the undercloud glance. Unset by default, but able to be set
during stack-create or stack-update.

Change-Id: I2997d23c584055c40034827e9beb58e6542ea11c

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -145,6 +145,27 @@ Parameters:
     Type: String
     Default: ''
     NoEcho: true
+  LiveUpdateUserName:
+    Type: String
+    Description: The live-update username for the undercloud Glance API.
+    Default: ''
+  LiveUpdateTenantName:
+    Type: String
+    Description: The live-update tenant name for the undercloud Glance API.
+    Default: ''
+  LiveUpdateHost:
+    Type: String
+    Description: The IP address for the undercloud Glance API.
+    Default: ''
+  LiveUpdatePassword:
+    Type: String
+    Default: ''
+    Description: The live-update password for the undercloud Glance API.
+    NoEcho: true
+  LiveUpdateComputeImage:
+    Type: String
+    Description: The image ID for live-updates to the overcloud compute nodes.
+    Default: ''
 Resources:
   RabbitCookie:
     Type: OS::Heat::RandomString
