--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -92,6 +92,27 @@ Parameters:
     Default: ''
     Description: Static content to append to /etc/hosts
     Type: String
+  LiveUpdateUserName:
+    Type: String
+    Description: The live-update username for the undercloud Glance API.
+    Default: ''
+  LiveUpdateTenantName:
+    Type: String
+    Description: The live-update tenant name for the undercloud Glance API.
+    Default: ''
+  LiveUpdateHost:
+    Type: String
+    Description: The IP address for the undercloud Glance API.
+    Default: ''
+  LiveUpdatePassword:
+    Type: String
+    Default: ''
+    Description: The live-update password for the undercloud Glance API.
+    NoEcho: true
+  LiveUpdateComputeImage:
+    Type: String
+    Description: The image ID for live-updates to the overcloud compute nodes.
+    Default: ''
 Resources:
   ComputeAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -193,3 +214,10 @@ Resources:
         host: {Ref: RabbitHost}
         username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
+      live-update:
+        host: {Ref: LiveUpdateHost}
+        username: {Ref: LiveUpdateUserName}
+        password: {Ref: LiveUpdatePassword}
+        tenant-name: {Ref: LiveUpdateTenantName}
+        base_image_id: {Ref: NovaImage}
+        live_update_image_id: {Ref: LiveUpdateComputeImage}
